crates/cinrs-core/tests/snapshots/codegen__prefetch_x86_64.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate_for_target(Standard::C99, \"x86_64-unknown-linux-gnu\", source)"
---
mod __cinrs_unit_73f82632 {
    #![allow(…)]
    const _: () = { /* the data-model check */ };
    pub unsafe extern "C" fn ahead(mut p: *const ::core::ffi::c_char) {
        unsafe {
            let _ = {
                let __cinrs_tmp0 = p as *const ::core::ffi::c_void;
                ::core::arch::x86_64::_mm_prefetch::<
                    { ::core::arch::x86_64::_MM_HINT_T0 },
                >(__cinrs_tmp0.cast::<i8>());
            };
            let _ = {
                let __cinrs_tmp1 = p.offset(64) as *const ::core::ffi::c_void;
                ::core::arch::x86_64::_mm_prefetch::<
                    { ::core::arch::x86_64::_MM_HINT_T0 },
                >(__cinrs_tmp1.cast::<i8>());
            };
            let _ = {
                let __cinrs_tmp2 = p.offset(128) as *const ::core::ffi::c_void;
                ::core::arch::x86_64::_mm_prefetch::<
                    { ::core::arch::x86_64::_MM_HINT_NTA },
                >(__cinrs_tmp2.cast::<i8>());
            };
        }
    }
    pub extern "C" fn hint(mut p: *mut ::core::ffi::c_int) {
        let _ = {
            let __cinrs_tmp0 = p as *const ::core::ffi::c_void;
        };
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_73f82632::*;
