crates/cinrs-core/tests/snapshots/codegen__promotions_and_conversions.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate(r\"\n        int promote(void) {\n            unsigned char a = 200;\n            unsigned char b = 100;\n            int wide = a + b;\n            unsigned u = 1;\n            int signed_vs_unsigned = -1 < u;\n            double d = wide;\n            float f = (float) d / 2;\n            _Bool flag = f;\n            return wide + signed_vs_unsigned + (int) f + flag;\n        }\n        \")"
---
mod __cinrs_unit_b1173e1a {
    const _: () = { /* the data-model check */ };
    #[allow(…)]
    pub unsafe extern "C" fn promote() -> ::core::ffi::c_int {
        unsafe {
            let mut a: ::core::ffi::c_uchar = 200;
            let mut b: ::core::ffi::c_uchar = 100;
            let mut wide: ::core::ffi::c_int = (a as ::core::ffi::c_int)
                .wrapping_add(b as ::core::ffi::c_int);
            let mut u: ::core::ffi::c_uint = 1;
            let mut signed_vs_unsigned: ::core::ffi::c_int = (4294967295 < u)
                as ::core::ffi::c_int;
            let mut d: ::core::ffi::c_double = wide as ::core::ffi::c_double;
            let mut f: ::core::ffi::c_float = d as ::core::ffi::c_float / 2.0;
            let mut flag: bool = f != 0.0;
            return wide
                .wrapping_add(signed_vs_unsigned)
                .wrapping_add(f as ::core::ffi::c_int)
                .wrapping_add(flag as ::core::ffi::c_int);
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_b1173e1a::*;
