crates/cinrs-core/tests/snapshots/codegen__structs_unions_and_enums.snap
---
source: crates/cinrs-core/tests/codegen.rs
expression: "generate(r\"\n        enum Kind { EMPTY, FULL = 4 };\n\n        struct Point { int x; int y; };\n\n        union Bits { float f; unsigned int u; };\n\n        typedef struct Point Point;\n\n        struct Shape {\n            enum Kind kind;\n            struct Point origin;\n            union Bits tag;\n        };\n\n        static struct Shape current = {.kind = FULL, .origin = {1, 2}};\n\n        int move_by(struct Shape *shape, int dx, int dy) {\n            shape->origin.x += dx;\n            shape->origin.y += dy;\n            return shape->origin.x;\n        }\n\n        Point centre(struct Shape s) {\n            return s.origin;\n        }\n\n        unsigned long shape_size(void) {\n            return sizeof(struct Shape);\n        }\n        \")"
---
mod __cinrs_unit_7fd40f37 {
    #![allow(…)]
    const _: () = { /* the data-model check */ };
    #[repr(C)]
    #[derive(Copy, Clone)]
    pub struct Point {
        pub x: ::core::ffi::c_int,
        pub y: ::core::ffi::c_int,
    }
    #[repr(C)]
    #[derive(Copy, Clone)]
    pub union Bits {
        pub f: ::core::ffi::c_float,
        pub u: ::core::ffi::c_uint,
    }
    #[repr(C)]
    #[derive(Copy, Clone)]
    pub struct Shape {
        pub kind: ::core::ffi::c_uint,
        pub origin: Point,
        pub tag: Bits,
    }
    pub const EMPTY: ::core::ffi::c_int = 0;
    pub const FULL: ::core::ffi::c_int = 4;
    pub type Kind = ::core::ffi::c_uint;
    static mut current: Shape = unsafe {
        Shape {
            kind: 4,
            origin: Point { x: 1, y: 2 },
            tag: ::core::mem::zeroed::<Bits>(),
        }
    };
    pub unsafe extern "C" fn move_by(
        mut shape: *mut Shape,
        mut dx: ::core::ffi::c_int,
        mut dy: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int {
        unsafe {
            (*shape).origin.x = (*shape).origin.x.wrapping_add(dx);
            (*shape).origin.y = (*shape).origin.y.wrapping_add(dy);
            return (*shape).origin.x;
        }
    }
    pub unsafe extern "C" fn centre(mut s: Shape) -> Point {
        unsafe {
            return s.origin;
        }
    }
    pub unsafe extern "C" fn shape_size() -> ::core::ffi::c_ulong {
        unsafe {
            return 16;
        }
    }
}
#[allow(unknown_lints, ambiguous_glob_reexports, unused_imports)]
pub use __cinrs_unit_7fd40f37::*;
